Refactor firmware structure and add WiFi support
Add WiFi management and UART commands for SSID/password

--- a/ESP32/firmware/main/CMakeLists.txt
+++ b/ESP32/firmware/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "main.c" "led.c" "relay.c" "uart.c" "com.c"
-                    INCLUDE_DIRS ".")
+idf_component_register(SRCS "src/main.c" "src/led.c" "src/relay.c" "src/uart.c" "src/com.c" "src/wifi.c"
+                    INCLUDE_DIRS "inc" ".")
 
 
