Add Blazor example server and ESP32 relay ACK support
Introduces a Blazor example server for relay control, including UI components, endpoints, and services for command queuing and acknowledgment. ESP32 firmware updated to support POSTing JSON ACKs after command execution, with improved logging and response handling.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 /ESP32/firmware/build
 /ESP32/firmware/.vscode
+/ExampleServer/WebRelay.Server.Example.Blazor/.vs
+/ExampleServer/WebRelay.Server.Example.Blazor/bin
+/ExampleServer/WebRelay.Server.Example.Blazor/obj
