--- a/ESP32/firmware/main/CMakeLists.txt
+++ b/ESP32/firmware/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "src/main.c" "src/led.c" "src/relay.c" "src/uart.c" "src/com.c" "src/wifi.c" "src/http.c" "src/server.c"
+idf_component_register(SRCS "src/main.c" "src/led.c" "src/relay.c" "src/uart.c" "src/com.c" "src/wifi.c" "src/http.c" "src/server.c" "src/webserver.c"
                     INCLUDE_DIRS "inc" ".")
 
 
